--- a/Project2(starNotary)/app/src/index.html
+++ b/Project2(starNotary)/app/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="">
     <title>StarNotary DAPP</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
